# khuda-homepage-backend-mvp

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
app/: db.py  main.py  models.py  schemas.py  seed.py
