[project]
name = "khuda-homepage-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.6",
    "psycopg[binary]==3.2.3",
    "pydantic==2.10.1",
    "python-dotenv==1.0.1",
    "sqlalchemy==2.0.36",
    "uvicorn[standard]==0.32.1",
]
